# dependent-monoidal-map

./: .travis.yml  CONTRIBUTING.md  ChangeLog.md  default.nix  dependent-monoidal-map.cabal  release.nix
.github/workflows/: haskell.yml
src/Data/Dependent/Map/: Monoidal.hs
src/Data/Dependent/Map/Monoidal/: NonEmpty.hs
