name: dependent-monoidal-map
version: 0.1.1.0
description: Data.Dependent.Map variant that appends conflicting entries when merging maps instead of discarding one side of the conflict.
license: BSD3
license-file: LICENSE
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
copyright: 2018 Obsidian Systems LLC
build-type: Simple
extra-source-files: ChangeLog.md
cabal-version: >=1.10

library
  exposed-modules: Data.Dependent.Map.Monoidal
  build-depends: base >=4.9 && <4.13
               , aeson
               , constraints
               , constraints-extras
               , dependent-sum
               , dependent-sum-aeson-orphans
               , dependent-map
  hs-source-dirs: src
  default-language: Haskell2010
